2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomType.cs: Instantiated generic types now
	  preserve generic parameters.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomCecilType.cs: fixed 'Bug 431761 - Code
	  completion is incorrect'.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ExpressionContext.cs: worked on expression
	  context filter.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: fixed 'Bug
	  432856 - Creation and editing broken for unsaved files'.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ResolveResult.cs: fixed bug in base result.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ResolveResult.cs: fixed a possible resolve
	  null reference.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ResolveResult.cs: fixed bug in member
	  resolve result.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  filtered compiler generated types.

2008-10-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/CompoundType.cs,
	  MonoDevelop.Projects.Dom.Serialization/DomPersistence.cs,
	  MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Worked on compound type persistence.

2008-10-03  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/Project.cs: Skip unnecessary file write time
	  checks.
	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs,
	  MonoDevelop.Projects.Dom/ParsedDocument.cs: Tweak flags API.
	* MonoDevelop.Projects/DotNetProjectConfiguration.cs: Avoid unnecessary
	  string creation/concat.

2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/FileCopyMode.cs,
	  MonoDevelop.Projects/FileCopySet.cs,
	  MonoDevelop.Projects/BuildAction.cs,