@@ -799,7 +799,7 @@ namespace MonoDevelop.Projects.Dom.Parser
 					fileContent = getContent ();
 
 				int contentHash = fileContent.GetHashCode ();
-
+				
 				int lastSize;
 				if (!lastUpdateSize.TryGetValue (fileName, out lastSize) || lastSize != contentHash) {
 					parseInformation = DoParseFile (fileName, fileContent);
@@ -807,12 +807,11 @@ namespace MonoDevelop.Projects.Dom.Parser
 						return null;
 					// don't update project dom with incorrect parse informations, they may not contain all
 					// information.
+					if (parseInformation.CompilationUnit != null)
+						SetSourceProject (parseInformation.CompilationUnit, GetProjectDom (projects [0]));
 					if (!parseInformation.HasErrors &&
 					    (parseInformation.Flags & ParsedDocumentFlags.NonSerializable) == 0) {
 						if (projects != null && projects.Length > 0) {
-							if (parseInformation.CompilationUnit != null)
-								SetSourceProject (parseInformation.CompilationUnit,
-								                  GetProjectDom (projects [0]));
 							foreach (Project project in projects) {
 								ProjectDom db = GetProjectDom (project);
 								if (db != null) {
