@@ -1,5 +1,11 @@
 2008-10-07  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs,
+	  MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
+	  Ensured that sourceprojectdom is set.
+
+2008-10-07  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.Projects.Dom/DomType.cs: Instantiated generic types now
 	  preserve generic parameters.
 
